crates/fleet-server/tests/snapshots/api_error__conflict.snap
---
source: crates/fleet-server/tests/api_error.rs
expression: seen
---
{
  "status": 409,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "error": {
      "code": "conflict",
      "message": "The request conflicts with the current state.",
      "request_id": "test-request-id"
    }
  }
}
