crates/fleet-server/tests/snapshots/api_error__method_not_allowed.snap
---
source: crates/fleet-server/tests/api_error.rs
expression: seen
---
{
  "status": 405,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "error": {
      "code": "method_not_allowed",
      "message": "This method isn't allowed here.",
      "request_id": "test-request-id"
    }
  }
}
