crates/fleet-server/tests/snapshots/api_error__timeout.snap
---
source: crates/fleet-server/tests/api_error.rs
expression: seen
---
{
  "status": 408,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "error": {
      "code": "timeout",
      "message": "The request took too long.",
      "request_id": "test-request-id"
    }
  }
}
