crates/fleet-server/tests/snapshots/api_error__unauthorized.snap
---
source: crates/fleet-server/tests/api_error.rs
expression: seen
---
{
  "status": 401,
  "headers": {
    "content-type": "application/json",
    "www-authenticate": "Bearer"
  },
  "body": {
    "error": {
      "code": "unauthorized",
      "message": "Authentication is required.",
      "request_id": "test-request-id"
    }
  }
}
